@@ -8,6 +8,8 @@ Changelog for 1.3.27
 * Fixed prepare-company-database.sh clobbering the Apache configuration on
   every run (Chris T, 3595000)
 * Fixed error sorting recon search by account (Chris T, h/t Erik H, 3589473)
+* Users are now migrated with nonsense passwords from 1,2 (Chris T, 3587257)
+* Upgrade now handles new total column in jcitems properly (Chris T)
 * Fixed configure_apache.sh, read input, change of file name from 
   ledgersmb-httpd.conf to ledgersmb-httpd.conf.template (Havard S)
 * Update INSTALL - section "Adding configuration to Apache 2.x" (Havard S)
